Project "Innoscripta News Aggregator" {
    database_type: 'MariaDB'
    note: '''
    This ERD help us to create migrations
    '''
}

Table sources {
    id bigint [PK, increment]
    name varchar(255)
    slug string(255) [unique]
    is_active bool [default: true]
    last_fetched_at timestamp [null]

    indexes {
        slug [unique, name: 'source_slug_unique']
        is_active [name: 'idx_is_active']
    }
}

Table articles {
    id bigint [PK, increment]
    source_id bigint [ref : > sources.id]
    external_id varchar(255)
    title varchar(500)
    description text
    content longtext
    author varchar
    url varchar(500) [unique]
    image_url varchar
    published_at datetime
    fetched_at datetime

    indexes {
        (source_id, external_id) [unique, name: 'unique_source_article']
        url [unique, name: 'articles_url_unique']
        source_id [name: 'idx_source_id']
        published_at [name: 'idx_published_at']
        (source_id, published_at) [name: 'idx_source_published']
        (title, description, content) [type: fulltext, name:'ft_search']
    }
}

Table categories {
    id bigint [PK, increment]
    name varchar
    slug varchar [unique]

    indexes {
        slug [unique, name: 'categories_slug_unique']
    }
}

Table article_category {
    article_id bigint [not null, ref: > articles.id]
    category_id bigint [not null, ref: > categories.id]

    indexes {
        (article_id, category_id) [unique, name:'unique_article_category']
        category_id [name: 'idx_category_id']
    }
}
